[add] ThirdPartyフォルダ追加
tesseractとnlohmann-jsonを追加

--- a/UmaUmaChecker/UmaUmaChecker.rc
+++ b/UmaUmaChecker/UmaUmaChecker.rc
@@ -51,12 +51,19 @@ END
 //
 
 IDD_MAIN DIALOGEX 0, 0, 313, 175
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_MINIMIZEBOX | WS_CAPTION | WS_SYSMENU
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_MINIMIZEBOX | WS_POPUP | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "ウマウマチェッカー"
 CLASS "UmaUmaChecker"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
+    GROUPBOX        "選択肢",IDC_STATIC,7,60,299,108
+    EDITTEXT        IDC_EDITCHOISE1,16,79,82,14,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_EDITCHOISE2,16,111,82,14,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_EDITCHOISE3,16,143,82,14,ES_AUTOHSCROLL | ES_READONLY
+    COMBOBOX        IDC_COMBO1,59,45,151,30,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "育成ウマ娘",IDC_STATIC,7,48,37,8
+    PUSHBUTTON      "スタート",IDC_BUTTONSTART,7,7,50,14
 END
 
 
