--- a/UmaUmaChecker/UmaUmaChecker.rc
+++ b/UmaUmaChecker/UmaUmaChecker.rc
@@ -64,6 +64,7 @@ BEGIN
     COMBOBOX        IDC_COMBO1,59,45,151,30,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "育成ウマ娘",IDC_STATIC,7,48,37,8
     PUSHBUTTON      "スタート",IDC_BUTTONSTART,7,7,50,14
+    PUSHBUTTON      "スクリーンショット",IDC_BUTTONSCREENSHOT,65,7,57,14
 END
 
 
