[add] イベント表示用テキストボックス追加
イベントを表示するためのテキストボックスを追加＆検出した項目を表示

--- a/UmaUmaChecker/UmaUmaChecker.rc
+++ b/UmaUmaChecker/UmaUmaChecker.rc
@@ -61,10 +61,12 @@ BEGIN
     EDITTEXT        IDC_EDITCHOISE1,16,79,82,14,ES_AUTOHSCROLL | ES_READONLY
     EDITTEXT        IDC_EDITCHOISE2,16,111,82,14,ES_AUTOHSCROLL | ES_READONLY
     EDITTEXT        IDC_EDITCHOISE3,16,143,82,14,ES_AUTOHSCROLL | ES_READONLY
-    COMBOBOX        IDC_COMBO1,59,45,151,30,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "育成ウマ娘",IDC_STATIC,7,48,37,8
+    COMBOBOX        IDC_COMBO1,58,28,151,30,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "育成ウマ娘:",IDC_STATIC,8,31,40,8
     PUSHBUTTON      "スタート",IDC_BUTTONSTART,7,7,50,14
     PUSHBUTTON      "スクリーンショット",IDC_BUTTONSCREENSHOT,65,7,57,14
+    EDITTEXT        IDC_EDITEVENTNAME,58,44,152,14,ES_AUTOHSCROLL | ES_READONLY
+    LTEXT           "イベント名:",IDC_STATIC,8,47,36,8
 END
 
 
