[update] イベント読み込み処理修正
コロンを全角化、ダブルクオーテーションを削除してイベント名が類似検索でヒットするよう変更

--- a/UmaUmaChecker/UmaUmaChecker.rc
+++ b/UmaUmaChecker/UmaUmaChecker.rc
@@ -50,23 +50,26 @@ END
 // Dialog
 //
 
-IDD_MAIN DIALOGEX 0, 0, 313, 175
+IDD_MAIN DIALOGEX 0, 0, 313, 201
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_MINIMIZEBOX | WS_POPUP | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "ウマウマチェッカー"
 CLASS "UmaUmaChecker"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    GROUPBOX        "選択肢",IDC_STATIC,7,60,299,108
-    EDITTEXT        IDC_EDITCHOISE1,16,79,82,14,ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_EDITCHOISE2,16,111,82,14,ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_EDITCHOISE3,16,143,82,14,ES_AUTOHSCROLL | ES_READONLY
-    COMBOBOX        IDC_COMBO1,58,28,151,30,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    GROUPBOX        "選択肢",IDC_STATIC,7,64,299,130
+    EDITTEXT        IDC_EDITCHOISE1,15,75,110,14,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_EDITCHOISE2,16,115,110,14,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_EDITCHOISE3,16,157,109,14,ES_AUTOHSCROLL | ES_READONLY
+    COMBOBOX        IDC_COMBO1,58,28,198,30,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "育成ウマ娘:",IDC_STATIC,8,31,40,8
     PUSHBUTTON      "スクリーンショット",IDC_BUTTONSCREENSHOT,65,7,57,14
-    EDITTEXT        IDC_EDITEVENTNAME,58,44,152,14,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_EDITEVENTNAME,58,44,198,14,ES_AUTOHSCROLL | ES_READONLY
     LTEXT           "イベント名:",IDC_STATIC,8,47,36,8
     CONTROL         "スタート",IDC_BUTTONSTART,"Button",BS_AUTOCHECKBOX | BS_PUSHLIKE | WS_TABSTOP,7,7,49,14
+    EDITTEXT        IDC_EDIT1,136,74,170,32,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_EDIT2,136,114,170,32,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_EDIT3,136,155,170,32,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY
 END
 
 
@@ -83,7 +86,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 306
         TOPMARGIN, 7
-        BOTTOMMARGIN, 168
+        BOTTOMMARGIN, 194
     END
 END
 #endif    // APSTUDIO_INVOKED
