[update] 育成ウマのデータ読み込み実装
育成ウマのイベントを読み込むように

--- a/UmaUmaChecker/UmaUmaChecker.rc
+++ b/UmaUmaChecker/UmaUmaChecker.rc
@@ -51,7 +51,7 @@ END
 //
 
 IDD_MAIN DIALOGEX 0, 0, 313, 201
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_MINIMIZEBOX | WS_POPUP | WS_CAPTION | WS_SYSMENU
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_CENTER | WS_MINIMIZEBOX | WS_POPUP | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "ウマウマチェッカー"
 CLASS "UmaUmaChecker"
@@ -67,9 +67,9 @@ BEGIN
     EDITTEXT        IDC_EDITEVENTNAME,58,44,198,14,ES_AUTOHSCROLL | ES_READONLY
     LTEXT           "イベント名:",IDC_STATIC,8,47,36,8
     CONTROL         "スタート",IDC_BUTTONSTART,"Button",BS_AUTOCHECKBOX | BS_PUSHLIKE | WS_TABSTOP,7,7,49,14
-    EDITTEXT        IDC_EDIT1,136,74,170,32,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_EDIT2,136,114,170,32,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_EDIT3,136,155,170,32,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_EDIT1,136,74,165,32,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_EDIT2,136,114,165,32,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_EDIT3,136,155,165,32,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY
 END
 
 
