[update] Releaseビルドの設定変更
Releaseビルドでpdbは作成しない

--- a/UmaOCRWrapper/UmaOCRWrapper.vcxproj
+++ b/UmaOCRWrapper/UmaOCRWrapper.vcxproj
@@ -109,6 +109,7 @@
     </ClCompile>
     <Link>
       <AdditionalDependencies />
+      <GenerateDebugInformation>false</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -120,6 +121,7 @@
     </ClCompile>
     <Link>
       <AdditionalDependencies />
+      <GenerateDebugInformation>false</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
