[upate] 更新機能追加
更新でファイル更新ができるように

--- a/UmaUmaChecker/UmaUmaChecker.rc
+++ b/UmaUmaChecker/UmaUmaChecker.rc
@@ -82,11 +82,11 @@ BEGIN
     DEFPUSHBUTTON   "OK",IDOK,198,173,50,14
     PUSHBUTTON      "キャンセル",IDCANCEL,252,173,50,14
     PUSHBUTTON      "更新",IDC_BUTTONUPDATE,121,13,50,14
-    CONTROL         "デバッグを有効化",IDC_CHECKDEBUG,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,16,136,70,10
+    CONTROL         "デバッグを有効化",IDC_CHECKDEBUG,"Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,16,136,70,10
     GROUPBOX        "高度な機能",IDC_STATIC,7,123,295,47
     GROUPBOX        "一般",IDC_STATIC,7,3,295,47
     CONTROL         "イベントを識別できなかった場合にキャプチャを保存する",IDC_CHECKMISSINGEVENT,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,16,150,185,10
+                    "Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,16,150,185,10
     EDITTEXT        IDC_EDITSCREENSHOTPATH,41,66,210,14,ES_AUTOHSCROLL
     GROUPBOX        "スクリーンショット",IDC_STATIC,7,51,295,70
     LTEXT           "場所:",IDC_STATIC,14,69,20,8
